2003/11/08
	RELEASE 1.3.2

	Added a serialization dispatcher.

	Added format arg to save method.

	Store now remembers prefix/namespace bindings.


2003/10/14
	RELEASE 1.3.1

	Fixed bug in serializer where triples where only getting
	serialized the first time.

	Added type checking for contexts.

	Fixed bug that caused comparisons with a Literal to fail when
	the right hand side was not a string.

	Added DB_INIT_CDB flag to SCBacked for supporting multiple
	reader/single writer access

	Changed rdf:RDF to be optional to conform with latest spec.

	Fixed handling of XMLLiterals


2003/04/40
	RELEASE 1.3.0

	Removed bag_id support and added it to OLD_TERMS.

	Added a double hash for keys in SCBacked.

	Fixed _HTTPClient so that it no longer removes metadata about
	a context right after it adds it.

	Added a KDTreeStore and RedlandStore backends.

	Added a StoreTester.


2003/02/28
	RELEASE 1.2.4

	Fixed bug in SCBackend where language and datatype information
	where being ignored.

	Fixed bug in transitive_subjects.

	Updated some of the test cases that where not up to date.

	async_load now adds more http header and error information to
	the InformationStore.


2003/02/11
	RELEASE 1.2.3

	Fixed bug in load methods where relative URLs where not being
	absolutized correctly on Windows.

	Fixed serializer so that it throws an exception when trying to
	serialize a graph with a predicate that can not be split.


2003/02/07
	RELEASE 1.2.2

	Added an exists method to the BackwardCompatibility mixin.

	Added versions of remove, remove_triples and triples methods
	to the BackwardCompatility mixin for TripleStores that take an
	s, p, o as opposed to an (s, p, o).


2003/02/03
	RELEASE 1.2.1

	Added support for parsing XMLLiterals.

	Added support for proper charmod checking (only works in
	Python2.3).

	Fixed remaining rdfcore test cases that where not passing.

	Fixed windows bug in AbstractInformationStore's run method.


2003/01/02
	RELEASE 1.2.0
